log
Mon 06 May 2024 06:58:42 PM UTC: 
 tests:  1|8
total_score: 0/70
ef11c73
Mon 06 May 2024 07:04:21 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
a3e5128
Mon 06 May 2024 07:04:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ac033c5
Mon 06 May 2024 07:16:53 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *aux = createTreeNode(key, value);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
9b09c5e
Mon 06 May 2024 07:18:17 PM UTC: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *aux = createTreeNode(key, value);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
ff62165
Mon 06 May 2024 07:18:29 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
dcd2eed
Mon 06 May 2024 07:21:25 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘y’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode *y = NULL;
      |             ^
treemap.c:53:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *aux = createTreeNode(key, value);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
423e9c0
Mon 06 May 2024 07:21:33 PM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:13: error: variable ‘y’ set but not used [-Werror=unused-but-set-variable]
   54 |   TreeNode *y = NULL;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
796ace9
Mon 06 May 2024 07:25:54 PM UTC: 
 treemap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
50770fb
Mon 06 May 2024 07:36:45 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
719ad80
